Replace use of deprecated newInstance calls.
Calls to newInstance() are deprecated in JDK 9+. Replace with calls to
getDeclaredConstructor().newInstance()